--- a/src/main/resources/templates/my-rentals.html
+++ b/src/main/resources/templates/my-rentals.html
@@ -30,19 +30,19 @@
                         <tr>
                             <th class="px-6 py-3 text-left text-xs font-medium uppercase">Car Make</th>
                             <th class="px-6 py-3 text-left text-xs font-medium uppercase">Model</th>
-                            <th class="px-6 py-3 text-left text-xs font-medium uppercase">Rental Date</th>
-                            <th class="px-6 py-3 text-left text-xs font-medium uppercase">Price/Day</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium uppercase">Start Date</th> <th class="px-6 py-3 text-left text-xs font-medium uppercase">End Date</th>   <th class="px-6 py-3 text-left text-xs font-medium uppercase">Price/Day</th>
                         </tr>
                     </thead>
                     <tbody class="bg-gray-800">
                         <tr th:each="rental : ${rentals}" class="border-b border-gray-700">
                             <td class="px-6 py-4" th:text="${rental.car.make}">Toyota</td>
                             <td class="px-6 py-4" th:text="${rental.car.model}">Camry</td>
-                            <td class="px-6 py-4" th:text="${rental.rentalDate}">2025-10-20</td>
+                            <td class="px-6 py-4" th:text="${rental.startDate}">2025-10-20</td>
+                            <td class="px-6 py-4" th:text="${rental.endDate}">2025-10-25</td>
                             <td class="px-6 py-4" th:text="${'$' + #numbers.formatDecimal(rental.car.pricePerDay, 1, 'COMMA', 2, 'POINT')}">$55.00</td>
                         </tr>
                         <tr th:if="${#lists.isEmpty(rentals)}">
-                            <td colspan="4" class="text-center py-4 text-gray-400">You have no past rentals.</td>
+                             <td colspan="5" class="text-center py-4 text-gray-400">You have no past rentals.</td>
                         </tr>
                     </tbody>
                 </table>
